tests/cases/should_fail/misc/issue_449.stderr
error: unexpectedly encountered a `=`
 --> $DIR/issue_449.hash:3:2
2 |   
3 |   <=>a // Should report that it unexpectedly encountered `=`
  |    ^ here
  = help: consider adding a `>`
